--- a/tutorial/01_theory_ru.ipynb
+++ b/tutorial/01_theory_ru.ipynb
@@ -356,9 +356,9 @@
     "$$\n",
     "\\begin{equation*}\n",
     " \\begin{cases}\n",
-    "   \\displaystyle a'' + \\frac{1}{\\beta^2\\gamma} \\gamma' a' + \\frac{1}{2\\beta^2\\gamma}\\gamma''a + k_qa - \\frac{2P}{(a+b)} - \\frac{\\epsilon_x^2}{a^3} = 0 ,\n",
+    "   \\displaystyle a'' + \\frac{1}{\\beta^2\\gamma} \\gamma' a' + \\frac{1}{2\\beta^2\\gamma}\\gamma''a + ka - \\frac{2P}{(a+b)} - \\frac{\\epsilon_x^2}{a^3} = 0 ,\n",
     "   \\\\\n",
-    "   \\displaystyle b'' + \\frac{1}{\\beta^2\\gamma} \\gamma' b' + \\frac{1}{2\\beta^2\\gamma}\\gamma''b - k_qb - \\frac{2P}{(a+b)} - \\frac{\\epsilon_y^2}{b^3} = 0.\n",
+    "   \\displaystyle b'' + \\frac{1}{\\beta^2\\gamma} \\gamma' b' + \\frac{1}{2\\beta^2\\gamma}\\gamma''b - kb - \\frac{2P}{(a+b)} - \\frac{\\epsilon_y^2}{b^3} = 0.\n",
     " \\end{cases}\n",
     "\\end{equation*}\n",
     "$$\n"
@@ -368,13 +368,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Пусть $\\displaystyle x = \\frac{da}{dz},  y = \\frac{db}{dz},  \\displaystyle \\frac{d\\gamma }{dz}\\approx \\frac{e E_z}{m c^2}, k = \\frac{1}{R} - $ кривизна, тогда\n",
+    "Пусть $\\displaystyle x = \\frac{da}{dz},  y = \\frac{db}{dz},  \\displaystyle \\frac{d\\gamma }{dz}\\approx \\frac{e E_z}{m c^2},$ тогда\n",
     "$$\n",
     "\\displaystyle\n",
     "\\left\\{\\begin{matrix}\n",
-    "\\displaystyle \\frac{dx}{dz}= -  \\frac{1}{\\beta^2\\gamma} \\gamma' a' - \\frac{1}{2\\beta^2\\gamma}\\gamma''a - k_qa + \\frac{2P}{(a+b)} + \\frac{\\epsilon_x^2}{a^3}\\\\ \n",
+    "\\displaystyle \\frac{dx}{dz}= -  \\frac{1}{\\beta^2\\gamma} \\gamma' a' - \\frac{1}{2\\beta^2\\gamma}\\gamma''a - ka + \\frac{2P}{(a+b)} + \\frac{\\epsilon_x^2}{a^3}\\\\ \n",
     " \\displaystyle\\frac{da}{dz} =  x\\\\\n",
-    " \\displaystyle \\frac{dy}{dz}= -  \\frac{1}{\\beta^2\\gamma} \\gamma' b' - \\frac{1}{2\\beta^2\\gamma}\\gamma''b + k_qb + \\frac{2P}{(a+b)} + \\frac{\\epsilon_x^2}{b^3}\\\\ \n",
+    " \\displaystyle \\frac{dy}{dz}= -  \\frac{1}{\\beta^2\\gamma} \\gamma' b' - \\frac{1}{2\\beta^2\\gamma}\\gamma''b + kb + \\frac{2P}{(a+b)} + \\frac{\\epsilon_x^2}{b^3}\\\\ \n",
     " \\displaystyle\\frac{db}{dz} =  y\n",
     "\\end{matrix}\\right.\n",
     "$$\n",
