--- a/notebooks/01_theory.ipynb
+++ b/notebooks/01_theory.ipynb
@@ -298,7 +298,7 @@
     "\\end{equation*}\n",
     "$$\n",
     "\n",
-    "Let $\\displaystyle x = \\frac {da} {dz}, y = \\frac {db} {dz}, \\displaystyle \\frac {d \\gamma} {dz} \\approx \\frac {e E_z} {mc ^ 2 },$ then\n",
+    "Let $\\displaystyle x = \\frac {da} {dz}, y = \\frac {db} {dz}, \\displaystyle \\frac {d \\gamma} {dz} \\approx \\frac {e E_z} {mc ^ 2 },$ then:\n",
     "$$\n",
     "\\displaystyle\n",
     "\\left \\{\\begin{matrix}\n",
