--- a/notebooks/01_theory_ru.ipynb
+++ b/notebooks/01_theory_ru.ipynb
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Пусть $\\displaystyle x = \\frac{da}{dz},  y = \\frac{db}{dz},  \\displaystyle \\frac{d\\gamma }{dz}\\approx \\frac{e E_z}{m c^2},$ тогда\n",
+    "Пусть $\\displaystyle x = \\frac{da}{dz},  y = \\frac{db}{dz},  \\displaystyle \\frac{d\\gamma }{dz}\\approx \\frac{e E_z}{m c^2},$ тогда:\n",
     "$$\n",
     "\\displaystyle\n",
     "\\left\\{\\begin{matrix}\n",
