--- a/notebooks/00_introduction.ipynb
+++ b/notebooks/00_introduction.ipynb
@@ -14,7 +14,8 @@
     "\n",
     "### Notebooks\n",
     "\n",
-    "####  01. [Theory](https://nbviewer.jupyter.org/github/fuodorov/kenv/blob/notebooks/notebooks/tutorial/01a_theory.ipynb)\n",
+    "#### 00. [Itroduction](00__introduction.ipynb)\n",
+    "####  01. [Theory](01_theory.ipynb)\n",
     "The theory of the Kapchinsky-Vladimir envelope equation is considered.\n",
     "####  02. [Manual](02_manual.ipynb)\n",
     "The basic applications of the kenv are considered.\n",
@@ -23,7 +24,9 @@
     "####  04. [Genetic algorithm](04_genetic.ipynb)\n",
     "The application of the genetic algorithm (deap library) for constructing the envelope is considered.\n",
     "####  05. [GUI](05_GUI.ipynb)\n",
-    "Considered a graphical interface.\n"
+    "Considered a graphical interface.\n",
+    "#### 0A. [Test](0A_test.ipynb)\n",
+    "KENV vs Astra vs WARP vs SAM.\n"
    ]
   }
  ],
