--- a/notebooks/00_introduction.ipynb
+++ b/notebooks/00_introduction.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "### Notebooks\n",
     "\n",
-    "#### 00. [Itroduction](00__introduction.ipynb)\n",
+    "#### 00. [Itroduction](00_introduction.ipynb)\n",
     "####  01. [Theory](01_theory.ipynb)\n",
     "The theory of the Kapchinsky-Vladimir envelope equation is considered.\n",
     "####  02. [Manual](02_manual.ipynb)\n",
