--- a/notebooks/01_theory.ipynb
+++ b/notebooks/01_theory.ipynb
@@ -321,10 +321,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Trajectory equation for one particle\n",
+    "\n",
+    "The vector potential in the solenoid has only one component and is easily expressed in terms of $ B_z (z) $:\n",
+    "$$\n",
+    "A_ \\phi (z, r) = \\sum_0 ^ {inf} \\dfrac {(- 1) ^ n} {n! (N + 1)!} B_z ^ {2n} (\\dfrac {r} {2}) ^ {2n + 1/2}.\n",
+    "$$\n",
+    "Therefore, the Lagrangian in a cylindrical coordinate system has the form:\n",
+    "$$\n",
+    "L = -mc ^ 2 (1- \\beta ^ 2) ^ {1/2} + \\dfrac {e} {c} A_ \\phi r \\dot \\phi.\n",
+    "$$\n",
+    "Axial symmetry implies the existence of an integral of motion:\n",
+    "$$\n",
+    "P_ \\phi = \\gamma mr ^ 2 \\dot \\phi + \\dfrac {e} {c} r A_ \\phi = \\gamma mr ^ 2 \\dot \\phi_0.\n",
+    "$$\n",
+    "Differentiating by $ z $ we get:\n",
+    "$$\n",
+    "\\phi '- \\phi_0' = - \\dfrac {e} {pc} \\dfrac {A_ \\phi} {r}.\n",
+    "$$\n",
+    "And in the paraxial approximation:\n",
+    "$$\n",
+    "\\phi '- \\phi_0' = - \\dfrac {e} {pc} B_z (z).\n",
+    "$$\n",
+    "From:\n",
+    "$$\n",
+    "\\delta \\phi = \\int \\dfrac {e} {2pc} B_z (z) dz.\n",
+    "$$\n",
+    "Then the equations of the trajectory in the given coordinates look like this:\n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    " \\begin{cases}\n",
+    "   \\displaystyle \\tilde x '' + \\frac {1} {\\beta ^ 2 \\gamma} \\gamma '\\tilde x' + \\frac {1} {2 \\beta ^ 2 \\gamma} \\gamma '' \\tilde x + k_s \\tilde x = 0,\n",
+    "   \\\\\n",
+    "   \\displaystyle \\tilde y '' + \\frac {1} {\\beta ^ 2 \\gamma} \\gamma '\\tilde y' + \\frac {1} {2 \\beta ^ 2 \\gamma} \\gamma '' \\tilde y + k_s \\tilde y = 0,\n",
+    " \\end{cases}\n",
+    "\\end{equation*}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Literature\n",
     "\n",
     "1. J. Lawson \"Physics of charged particle beams\"\n",
-    "2. N.A. Vinokurov \"Lectures on electronic optics for accelerating physicists\""
+    "2. N.A. Vinokurov \"Lectures on electronic optics for accelerating physicists\"\n",
+    "3. A.A. Zholents \"On compensation of the influence of the solenoid field by quadrupole lenses\""
    ]
   }
  ],
