--- a/notebooks/input/01_theory_ru.ipynb
+++ b/notebooks/input/01_theory_ru.ipynb
@@ -392,6 +392,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Уравнение траектории для одной частицы"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Векторный потенциал в соленоиде имеет только одну компоненту и легко выражается через $B_z(z)$:\n",
+    "$$\n",
+    "A_\\phi (z,r)=\\sum_0^{inf} \\dfrac{(-1)^n}{n!(n+1)!} B_z^{2n}(\\dfrac{r}{2})^{2n+1/2}.\n",
+    "$$\n",
+    "Следовательно Лагранжиан в цилиндрической системе координат имеет вид:\n",
+    "$$\n",
+    "L = -mc^2(1-\\beta^2)^{1/2} + \\dfrac{e}{c}A_\\phi r \\dot\\phi.\n",
+    "$$\n",
+    "Из аксиальной симметрии следует существование интеграла движения:\n",
+    "$$\n",
+    "P_\\phi = \\gamma mr^2\\dot\\phi + \\dfrac{e}{c} r A_\\phi = \\gamma mr^2\\dot\\phi_0.\n",
+    "$$\n",
+    "Продифференцировав по $z$ получим:\n",
+    "$$\n",
+    "\\phi' - \\phi_0' = -\\dfrac{e}{pc}\\dfrac{A_\\phi}{r}.\n",
+    "$$\n",
+    "И в параксиальном приближении:\n",
+    "$$\n",
+    "\\phi' - \\phi_0' = -\\dfrac{e}{pc}B_z(z).\n",
+    "$$\n",
+    "Откуда:\n",
+    "$$\n",
+    "\\delta \\phi = \\int\\dfrac{e}{2pc}B_z(z)dz.\n",
+    "$$\n",
+    "Тогда и уравнения траектории в приведенных координатах выглядят так:\n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    " \\begin{cases}\n",
+    "   \\displaystyle \\tilde x'' + \\frac{1}{\\beta^2\\gamma} \\gamma'\\tilde x' + \\frac{1}{2\\beta^2\\gamma}\\gamma''\\tilde x + k_s \\tilde x  = 0 ,\n",
+    "   \\\\\n",
+    "   \\displaystyle \\tilde y'' + \\frac{1}{\\beta^2\\gamma} \\gamma'\\tilde y' + \\frac{1}{2\\beta^2\\gamma}\\gamma''\\tilde y +k_s \\tilde y  = 0, \n",
+    " \\end{cases}\n",
+    "\\end{equation*}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Литература"
    ]
   },
@@ -400,49 +447,9 @@
    "metadata": {},
    "source": [
     "1. Дж. Лоусон \"Физика пучков заряженных частиц\"\n",
-    "2. Н.А. Винокуров \"Лекции по электронной оптике для ускорительных физиков\" "
+    "2. Н.А. Винокуров \"Лекции по электронной оптике для ускорительных физиков\"\n",
+    "3. А.А. Жоленц \"О компенсации влияния поля соленоида квадрупольными линзами\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import kenv as kv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'kenv' has no attribute 'Beam'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-808f3f406c03>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m beam = kv.Beam(energy=2,\n\u001b[0m\u001b[0;32m      2\u001b[0m                \u001b[0mcurrent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2e3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                \u001b[0mradius\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m50e-3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                \u001b[0mangular\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m55e-3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                normalized_emittans=1000e-6)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'kenv' has no attribute 'Beam'"
-     ]
-    }
-   ],
-   "source": [
-    "beam = kv.Beam(energy=2,\n",
-    "               current=2e3,\n",
-    "               radius=50e-3,\n",
-    "               angular=55e-3,\n",
-    "               normalized_emittans=1000e-6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
