--- a/notebooks/work.ipynb
+++ b/notebooks/work.ipynb
@@ -141,19 +141,19 @@
    "outputs": [],
    "source": [
     "Solenoids = [ \n",
-    "    [ 0.45,       0.0,      'notebooks/input/B_z(z).dat', 'Sol. 0' ],\n",
-    "    [ 0.95,       0.001,    'notebooks/input/B_z(z).dat', 'Sol. 1' ],\n",
-    "    [ 2.1,        0.03,     'notebooks/input/B_z(z).dat', 'Sol. 2' ],\n",
-    "    [ 2.9077,     0.001,    'notebooks/input/B_z(z).dat', 'Sol. 3' ],\n",
-    "    [ 4.0024,     0.03,     'notebooks/input/B_z(z).dat', 'Sol. 4' ],\n",
-    "    [ 5.642,      0.0250,   'notebooks/input/B_z(z).dat', 'Sol. 5' ],\n",
-    "    [ 6.760,      0.001,    'notebooks/input/B_z(z).dat', 'Sol. 6' ],\n",
-    "    [ 8.116,      0.000,    'notebooks/input/B_z(z).dat', 'Sol. 7' ],\n",
-    "    [ 9.213,      0.000,    'notebooks/input/B_z(z).dat', 'Sol. 8' ],\n",
-    "    [ 10.138,     0.000,    'notebooks/input/B_z(z).dat', 'Sol. 9' ],\n",
-    "    [ 11.738,     0.000,    'notebooks/input/B_z(z).dat', 'Sol. 10'],\n",
-    "    [ 12.776,     0.000,    'notebooks/input/B_z(z).dat', 'Sol. 11'],\n",
-    "    [ 14.128,     0.000,    'notebooks/input/B_z(z).dat', 'Sol. 12'],\n",
+    "    [ 0.45,       0.0,      'input/B_z(z).dat', 'Sol. 0' ],\n",
+    "    [ 0.95,       0.001,    'input/B_z(z).dat', 'Sol. 1' ],\n",
+    "    [ 2.1,        0.03,     'input/B_z(z).dat', 'Sol. 2' ],\n",
+    "    [ 2.9077,     0.001,    'input/B_z(z).dat', 'Sol. 3' ],\n",
+    "    [ 4.0024,     0.03,     'input/B_z(z).dat', 'Sol. 4' ],\n",
+    "    [ 5.642,      0.0250,   'input/B_z(z).dat', 'Sol. 5' ],\n",
+    "    [ 6.760,      0.001,    'input/B_z(z).dat', 'Sol. 6' ],\n",
+    "    [ 8.116,      0.000,    'input/B_z(z).dat', 'Sol. 7' ],\n",
+    "    [ 9.213,      0.000,    'input/B_z(z).dat', 'Sol. 8' ],\n",
+    "    [ 10.138,     0.000,    'input/B_z(z).dat', 'Sol. 9' ],\n",
+    "    [ 11.738,     0.000,    'input/B_z(z).dat', 'Sol. 10'],\n",
+    "    [ 12.776,     0.000,    'input/B_z(z).dat', 'Sol. 11'],\n",
+    "    [ 14.128,     0.000,    'input/B_z(z).dat', 'Sol. 12'],\n",
     "]"
    ]
   },
@@ -164,14 +164,14 @@
    "outputs": [],
    "source": [
     "Accels = [\n",
-    "    [ 4.692,       -0.9,     'notebooks/input/E_z(z).dat',  'Cavity 1'],\n",
-    "    [ 6.076,       -0.9,     'notebooks/input/E_z(z).dat',  'Cavity 2'],\n",
-    "    [ 7.456,       -0.9,     'notebooks/input/E_z(z).dat',  'Cavity 3'],\n",
-    "    [ 8.838,       -0.9,     'notebooks/input/E_z(z).dat',  'Cavity 4'],\n",
-    "    [ 10.220,      -0.9,     'notebooks/input/E_z(z).dat',  'Cavity 5'],\n",
-    "    [ 11.602,      -0.9,     'notebooks/input/E_z(z).dat',  'Cavity 6'],\n",
-    "    [ 12.984,      -0.9,     'notebooks/input/E_z(z).dat',  'Cavity 7'],\n",
-    "    [ 14.366,      -0.9,     'notebooks/input/E_z(z).dat',  'Cavity 8'],    \n",
+    "    [ 4.692,       -0.9,     'input/E_z(z).dat',  'Cavity 1'],\n",
+    "    [ 6.076,       -0.9,     'input/E_z(z).dat',  'Cavity 2'],\n",
+    "    [ 7.456,       -0.9,     'input/E_z(z).dat',  'Cavity 3'],\n",
+    "    [ 8.838,       -0.9,     'input/E_z(z).dat',  'Cavity 4'],\n",
+    "    [ 10.220,      -0.9,     'input/E_z(z).dat',  'Cavity 5'],\n",
+    "    [ 11.602,      -0.9,     'input/E_z(z).dat',  'Cavity 6'],\n",
+    "    [ 12.984,      -0.9,     'input/E_z(z).dat',  'Cavity 7'],\n",
+    "    [ 14.366,      -0.9,     'input/E_z(z).dat',  'Cavity 8'],    \n",
     "]"
    ]
   },
@@ -190,7 +190,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
