--- a/notebooks/00_introduction.ipynb
+++ b/notebooks/00_introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial KENV\n",
+    "# Tutorial and Test KENV\n",
     "\n",
     "<a href=mailto:fuodorov1998@gmail.com>V. Fedorov</a>, <a href=mailto:nikdanila@bk.ru>D. Nikiforov</a>, <a href=http://www.inp.nsk.su/~petrenko/>A. Petrenko</a>, (Novosibirsk, 2019)\n",
     "\n",
@@ -12,7 +12,9 @@
     "\n",
     "Let's consider the main examples of using the solver kenv. Examples are presented in notebooks.\n",
     "\n",
-    "### Notebooks\n",
+    "## Notebooks\n",
+    "\n",
+    "### Tutorial\n",
     "\n",
     "#### 00. [Itroduction](00_introduction.ipynb)\n",
     "####  01. [Theory](01_theory.ipynb)\n",
@@ -25,9 +27,20 @@
     "The application of the genetic algorithm (deap library) for constructing the envelope is considered.\n",
     "####  05. [GUI](05_GUI.ipynb)\n",
     "Considered a graphical interface.\n",
-    "#### 0A. [Test](0A_test.ipynb)\n",
+    "#### 06. [Shifted centroid](06_shifted_centroid)\n",
+    "Simulation of a central particle with Astra.\n",
+    "\n",
+    "### Test\n",
+    "#### 0A. [Tracking beam test](0A_track_beam.ipynb)\n",
     "KENV vs Astra vs WARP vs SAM.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
