--- a/notebooks/04_genetic.ipynb
+++ b/notebooks/04_genetic.ipynb
@@ -66,20 +66,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "Solenoids = [ \n",
-    "    [ 0.5000, 0.02, 'input/B_z(z).dat', 'Sol. 1'],\n",
-    "    [ 1.0000, 0.02, 'input/B_z(z).dat', 'Sol. 2'],\n",
-    "    [ 1.5000, 0.02, 'input/B_z(z).dat', 'Sol. 3'],\n",
-    "    [ 2.0000, 0.02, 'input/B_z(z).dat', 'Sol. 4'],\n",
-    "    [ 2.5000, 0.02, 'input/B_z(z).dat', 'Sol. 5'],\n",
-    "    [ 3.0000, 0.02, 'input/B_z(z).dat', 'Sol. 6'],\n",
-    "    [ 3.5000, 0.02, 'input/B_z(z).dat', 'Sol. 7'],\n",
-    "    [ 4.0000, 0.02, 'input/B_z(z).dat', 'Sol. 8'],\n",
-    "    [ 4.5000, 0.02, 'input/B_z(z).dat', 'Sol. 9'],\n",
+    "    [ 0.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 1'],\n",
+    "    [ 1.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 2'],\n",
+    "    [ 1.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 3'],\n",
+    "    [ 2.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 4'],\n",
+    "    [ 2.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 5'],\n",
+    "    [ 3.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 6'],\n",
+    "    [ 3.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 7'],\n",
+    "    [ 4.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 8'],\n",
+    "    [ 4.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 9'],\n",
     "]"
    ]
   },
