--- a/notebooks/05_GUI.ipynb
+++ b/notebooks/05_GUI.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accelerator.add_acc('Acc. 1', 2.7, -1, 'input/E_z(z).dat')"
+    "accelerator.add_acc('Acc. 1', 2.7, -1, 'input/fields/E_z(z).dat')"
    ]
   },
   {
@@ -72,15 +72,15 @@
    "outputs": [],
    "source": [
     "Solenoids = [ \n",
-    "    [ 0.5000, 0.02, 'input/B_z(z).dat', 'Sol. 1'],\n",
-    "    [ 1.0000, 0.02, 'input/B_z(z).dat', 'Sol. 2'],\n",
-    "    [ 1.5000, 0.02, 'input/B_z(z).dat', 'Sol. 3'],\n",
-    "    [ 2.0000, 0.02, 'input/B_z(z).dat', 'Sol. 4'],\n",
-    "    [ 2.5000, 0.02, 'input/B_z(z).dat', 'Sol. 5'],\n",
-    "    [ 3.0000, 0.02, 'input/B_z(z).dat', 'Sol. 6'],\n",
-    "    [ 3.5000, 0.02, 'input/B_z(z).dat', 'Sol. 7'],\n",
-    "    [ 4.0000, 0.02, 'input/B_z(z).dat', 'Sol. 8'],\n",
-    "    [ 4.5000, 0.02, 'input/B_z(z).dat', 'Sol. 9'],\n",
+    "    [ 0.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 1'],\n",
+    "    [ 1.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 2'],\n",
+    "    [ 1.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 3'],\n",
+    "    [ 2.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 4'],\n",
+    "    [ 2.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 5'],\n",
+    "    [ 3.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 6'],\n",
+    "    [ 3.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 7'],\n",
+    "    [ 4.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 8'],\n",
+    "    [ 4.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 9'],\n",
     "]"
    ]
   },
@@ -98,15 +98,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accelerator compiled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "accelerator.compile()"
    ]
@@ -124,15 +116,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tracking is completed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "simulation.track()"
    ]
@@ -545,16 +529,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accelerator compiled.\n",
-      "Tracking is completed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "beam_source = ColumnDataSource(data=get_beam_data())"
    ]
@@ -670,15 +645,23 @@
       "application/vnd.bokehjs_exec.v0+json": "",
       "text/html": [
        "\n",
-       "<script src=\"http://localhost:58151/autoload.js?bokeh-autoload-element=1003&bokeh-absolute-url=http://localhost:58151&resources=none\" id=\"1003\"></script>"
+       "<script src=\"http://localhost:51411/autoload.js?bokeh-autoload-element=1003&bokeh-absolute-url=http://localhost:51411&resources=none\" id=\"1003\"></script>"
       ]
      },
      "metadata": {
       "application/vnd.bokehjs_exec.v0+json": {
-       "server_id": "c7a6b97e43ae4c4491d8ab71fe518fc7"
+       "server_id": "4a172c6e026d4c7b8e9c96982ca889ad"
       }
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:bokeh.server.views.ws:Refusing websocket connection from Origin 'http://localhost:8933';                       use --allow-websocket-origin=localhost:8933 or set BOKEH_ALLOW_WS_ORIGIN=localhost:8933 to permit this; currently we allow origins {'localhost:8888'}\n",
+      "WARNING:tornado.access:403 GET /ws?bokeh-protocol-version=1.0&bokeh-session-id=xbEdPllbDvOc7d9ym4VSpiu3nugjM2njeLFhKS8FPIrU (::1) 15.99ms\n"
+     ]
     }
    ],
    "source": [
