--- a/notebooks/00_introduction.ipynb
+++ b/notebooks/00_introduction.ipynb
@@ -21,9 +21,9 @@
     "The theory of the Kapchinsky-Vladimir envelope equation is considered.\n",
     "####  02. [Manual](02_manual.ipynb)\n",
     "The basic applications of the kenv are considered.\n",
-    "####  03. [Interactiv plotting](03_interactiv.ipynb)\n",
+    "####  03. [Interactiv basic plotting](03_interactiv_basic.ipynb)\n",
     "The basic interactive plotting on matplotlib.\n",
-    "####  04. [Genetic algorithm](04_genetic.ipynb)\n",
+    "####  04. [Genetic algorithm for envelope](04_genetic_envelope.ipynb)\n",
     "The application of the genetic algorithm (deap library) for constructing the envelope is considered.\n",
     "####  05. [GUI](05_GUI.ipynb)\n",
     "Considered a graphical interface.\n",
