--- a/notebooks/00_introduction.ipynb
+++ b/notebooks/00_introduction.ipynb
@@ -25,7 +25,7 @@
     "The basic interactive plotting on matplotlib.\n",
     "####  04. [Genetic algorithm for envelope](04_genetic_envelope.ipynb)\n",
     "The application of the genetic algorithm (deap library) for constructing the envelope is considered.\n",
-    "####  05. [GUI](05_GUI.ipynb)\n",
+    "####  05. [GUI with bokeh](05_GUI_bokeh.ipynb)\n",
     "Considered a graphical interface.\n",
     "#### 06. [Shifted centroid](06_shifted_centroid)\n",
     "Simulation of a central particle with Astra.\n",
