--- a/notebooks/00_introduction.ipynb
+++ b/notebooks/00_introduction.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "### Test\n",
     "#### 0A. [Tracking beam test](0A_track_beam.ipynb)\n",
-    "KENV vs Astra vs WARP vs SAM.\n"
+    "KENV vs Astra vs WARP vs SAM."
    ]
   },
   {
