--- a/notebooks/06_shifted_centroid.ipynb
+++ b/notebooks/06_shifted_centroid.ipynb
@@ -34,299 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on package kenv:\n",
-      "\n",
-      "NAME\n",
-      "    kenv\n",
-      "\n",
-      "PACKAGE CONTENTS\n",
-      "    accelerator\n",
-      "    beam\n",
-      "    solver\n",
-      "\n",
-      "CLASSES\n",
-      "    builtins.object\n",
-      "        kenv.accelerator.Accelerator\n",
-      "        kenv.accelerator.Element\n",
-      "        kenv.beam.Beam\n",
-      "        kenv.solver.Simulation\n",
-      "    \n",
-      "    class Accelerator(builtins.object)\n",
-      "     |  Accelerator(start: float, stop: float, step: float)\n",
-      "     |  \n",
-      "     |  Create an accelerator.\n",
-      "     |  \n",
-      "     |  Create an accelerator with parameters:\n",
-      "     |  start [m] --- the beginning of the accelerator,\n",
-      "     |  stop [m] --- end of the accelerator,\n",
-      "     |  step [m] --- step method along the accelerator.\n",
-      "     |  \n",
-      "     |  Can add a solenoids, quadrupoles and accelerating modules.\n",
-      "     |  \n",
-      "     |  Accelerator's parameters after compile:\n",
-      "     |  beamline:\n",
-      "     |  Bz_beamline, Ez_beamline, Gz_beamline\n",
-      "     |  function :\n",
-      "     |  Ez, Bz, Gz\n",
-      "     |  and\n",
-      "     |  dEzdz, dBzdz, dGzdz\n",
-      "     |  \n",
-      "     |  Methods defined here:\n",
-      "     |  \n",
-      "     |  __init__(self, start: float, stop: float, step: float)\n",
-      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      "     |  \n",
-      "     |  __str__(self)\n",
-      "     |      Return str(self).\n",
-      "     |  \n",
-      "     |  add_acc = add_accel(self, name: str, center: float, max_field: float, file_name: str) -> None\n",
-      "     |  \n",
-      "     |  add_accel(self, name: str, center: float, max_field: float, file_name: str) -> None\n",
-      "     |      Creates an accelerating module in the accelerator.\n",
-      "     |      \n",
-      "     |      Creates an accelerating module in the accelerator with parameters:\n",
-      "     |      name --- accelerating module's id,\n",
-      "     |      centert [m] --- accelerating module's center,\n",
-      "     |      max field [MV/m] --- accelerating module's maximum field,\n",
-      "     |      file name --- experimental profile of the Ez field,\n",
-      "     |  \n",
-      "     |  add_new_accel = add_accel(self, name: str, center: float, max_field: float, file_name: str) -> None\n",
-      "     |  \n",
-      "     |  add_new_quadrupole = add_quadrupole(self, name: str, center: float, max_field: float, file_name: str) -> None\n",
-      "     |  \n",
-      "     |  add_new_solenoid = add_solenoid(self, name: str, center: float, max_field: float, file_name: str) -> None\n",
-      "     |  \n",
-      "     |  add_quad = add_quadrupole(self, name: str, center: float, max_field: float, file_name: str) -> None\n",
-      "     |  \n",
-      "     |  add_quadrupole(self, name: str, center: float, max_field: float, file_name: str) -> None\n",
-      "     |      Creates a quadrupole in the accelerator.\n",
-      "     |      \n",
-      "     |      Creates a quadrupole in the accelerator with parameters:\n",
-      "     |      name --- quadrupole's id,\n",
-      "     |      centert [m] --- quadrupole's center,\n",
-      "     |      max field [T/m] --- quadrupole's maximum field,\n",
-      "     |      file name --- experimental profile of the Gz field,\n",
-      "     |  \n",
-      "     |  add_sol = add_solenoid(self, name: str, center: float, max_field: float, file_name: str) -> None\n",
-      "     |  \n",
-      "     |  add_solenoid(self, name: str, center: float, max_field: float, file_name: str) -> None\n",
-      "     |      Creates a solenoid in the accelerator.\n",
-      "     |      \n",
-      "     |      Creates a solenoid in the accelerator with parameters:\n",
-      "     |      name --- solenoid's id,\n",
-      "     |      centert [m] --- solenoid's center,\n",
-      "     |      max field [T] --- solenoid's maximum field,\n",
-      "     |      file name --- experimental profile of the Bz field,\n",
-      "     |  \n",
-      "     |  compile(self) -> None\n",
-      "     |      Compilation of the accelerator.\n",
-      "     |  \n",
-      "     |  del_acc = delete_accel(self, name: str = 'all') -> None\n",
-      "     |  \n",
-      "     |  del_accel = delete_accel(self, name: str = 'all') -> None\n",
-      "     |  \n",
-      "     |  del_quad = delete_quadrupole(self, name: str = 'all') -> None\n",
-      "     |  \n",
-      "     |  del_quadrupole = delete_quadrupole(self, name: str = 'all') -> None\n",
-      "     |  \n",
-      "     |  del_sol = delete_solenoid(self, name: str = 'all') -> None\n",
-      "     |  \n",
-      "     |  del_solenoid = delete_solenoid(self, name: str = 'all') -> None\n",
-      "     |  \n",
-      "     |  delete_accel(self, name: str = 'all') -> None\n",
-      "     |      Delete a accelerating module in the accelerator.\n",
-      "     |      \n",
-      "     |      Delete a accelerating module in the accelerator with parameters:\n",
-      "     |      name --- quadrupole's id\n",
-      "     |      \n",
-      "     |      *if there is no name that will be removed all\n",
-      "     |  \n",
-      "     |  delete_quadrupole(self, name: str = 'all') -> None\n",
-      "     |      Delete a quadrupole in the accelerator.\n",
-      "     |      \n",
-      "     |      Delete a quadrupole in the accelerator with parameters:\n",
-      "     |      name --- quadrupole's id\n",
-      "     |      \n",
-      "     |      *if there is no name that will be removed all\n",
-      "     |  \n",
-      "     |  delete_solenoid(self, name: str = 'all') -> None\n",
-      "     |      Delete a solenoid in the accelerator.\n",
-      "     |      \n",
-      "     |      Delete a solenoid in the accelerator with parameters:\n",
-      "     |      name --- solenoid's id\n",
-      "     |      \n",
-      "     |      *if there is no name that will be removed all\n",
-      "     |  \n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Data descriptors defined here:\n",
-      "     |  \n",
-      "     |  __dict__\n",
-      "     |      dictionary for instance variables (if defined)\n",
-      "     |  \n",
-      "     |  __weakref__\n",
-      "     |      list of weak references to the object (if defined)\n",
-      "    \n",
-      "    class Beam(builtins.object)\n",
-      "     |  Beam(current: float = 0.0, energy: float = 0.0, radius: float = 0.0, radius_x: float = 0.0, radius_y: float = 0.0, angular: float = 0.0, angular_x: float = 0.0, angular_y: float = 0.0, normalized_emittans: float = 0.0, normalized_emittans_x: float = 0.0, normalized_emittans_y: float = 0.0, x: float = 0.0, y: float = 0.0, phase: float = 0.0)\n",
-      "     |  \n",
-      "     |  Creating an electron beam.\n",
-      "     |  \n",
-      "     |  Creating an elliptical electron beam with parameters:\n",
-      "     |  current [A],\n",
-      "     |  energy [MeV],\n",
-      "     |  radius [m],\n",
-      "     |  angular [m],\n",
-      "     |  normalized emittans [m*rad],\n",
-      "     |  radius x [m],\n",
-      "     |  radius y [m],\n",
-      "     |  angular x [rad],\n",
-      "     |  angular y [rad],\n",
-      "     |  normalized emittans x [m*rad],\n",
-      "     |  normalized emittans y [m*rad]\n",
-      "     |  and\n",
-      "     |  x [m], y [m], phase [rad]\n",
-      "     |  \n",
-      "     |  Methods defined here:\n",
-      "     |  \n",
-      "     |  __init__(self, current: float = 0.0, energy: float = 0.0, radius: float = 0.0, radius_x: float = 0.0, radius_y: float = 0.0, angular: float = 0.0, angular_x: float = 0.0, angular_y: float = 0.0, normalized_emittans: float = 0.0, normalized_emittans_x: float = 0.0, normalized_emittans_y: float = 0.0, x: float = 0.0, y: float = 0.0, phase: float = 0.0)\n",
-      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      "     |  \n",
-      "     |  __str__(self)\n",
-      "     |      Return str(self).\n",
-      "     |  \n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Data descriptors defined here:\n",
-      "     |  \n",
-      "     |  __dict__\n",
-      "     |      dictionary for instance variables (if defined)\n",
-      "     |  \n",
-      "     |  __weakref__\n",
-      "     |      list of weak references to the object (if defined)\n",
-      "    \n",
-      "    class Element(builtins.object)\n",
-      "     |  Element(z0: float, max_field: float, file_name: str, name: str)\n",
-      "     |  \n",
-      "     |  Sets one accelerator element.\n",
-      "     |  \n",
-      "     |  Sets one accelerator element with parameters:\n",
-      "     |  z0 [m] --- element position,\n",
-      "     |  max_field --- maximum field,\n",
-      "     |  file_name --- field profile,\n",
-      "     |  name --- unique element name.\n",
-      "     |  \n",
-      "     |  Methods defined here:\n",
-      "     |  \n",
-      "     |  __init__(self, z0: float, max_field: float, file_name: str, name: str)\n",
-      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      "     |  \n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Data descriptors defined here:\n",
-      "     |  \n",
-      "     |  __dict__\n",
-      "     |      dictionary for instance variables (if defined)\n",
-      "     |  \n",
-      "     |  __weakref__\n",
-      "     |      list of weak references to the object (if defined)\n",
-      "    \n",
-      "    Sim = class Simulation(builtins.object)\n",
-      "     |  Sim(beam, accelerator)\n",
-      "     |  \n",
-      "     |  Simulation of the envelope beam in the accelerator.\n",
-      "     |  \n",
-      "     |  basic parameters after track:\n",
-      "     |  envelope_x and anvelope_y,\n",
-      "     |  centroid_x and centroid_y,\n",
-      "     |  larmor_phase\n",
-      "     |  \n",
-      "     |  Methods defined here:\n",
-      "     |  \n",
-      "     |  __init__(self, beam, accelerator)\n",
-      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      "     |  \n",
-      "     |  track(self, rtol: float = 1e-06)\n",
-      "     |      Tracking!\n",
-      "     |  \n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Data descriptors defined here:\n",
-      "     |  \n",
-      "     |  __dict__\n",
-      "     |      dictionary for instance variables (if defined)\n",
-      "     |  \n",
-      "     |  __weakref__\n",
-      "     |      list of weak references to the object (if defined)\n",
-      "     |  \n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Data and other attributes defined here:\n",
-      "     |  \n",
-      "     |  alfven_current = 17000\n",
-      "     |  \n",
-      "     |  clight = 299792458\n",
-      "     |  \n",
-      "     |  mass_rest_electron = 0.511\n",
-      "    \n",
-      "    class Simulation(builtins.object)\n",
-      "     |  Simulation(beam, accelerator)\n",
-      "     |  \n",
-      "     |  Simulation of the envelope beam in the accelerator.\n",
-      "     |  \n",
-      "     |  basic parameters after track:\n",
-      "     |  envelope_x and anvelope_y,\n",
-      "     |  centroid_x and centroid_y,\n",
-      "     |  larmor_phase\n",
-      "     |  \n",
-      "     |  Methods defined here:\n",
-      "     |  \n",
-      "     |  __init__(self, beam, accelerator)\n",
-      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      "     |  \n",
-      "     |  track(self, rtol: float = 1e-06)\n",
-      "     |      Tracking!\n",
-      "     |  \n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Data descriptors defined here:\n",
-      "     |  \n",
-      "     |  __dict__\n",
-      "     |      dictionary for instance variables (if defined)\n",
-      "     |  \n",
-      "     |  __weakref__\n",
-      "     |      list of weak references to the object (if defined)\n",
-      "     |  \n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Data and other attributes defined here:\n",
-      "     |  \n",
-      "     |  alfven_current = 17000\n",
-      "     |  \n",
-      "     |  clight = 299792458\n",
-      "     |  \n",
-      "     |  mass_rest_electron = 0.511\n",
-      "\n",
-      "FUNCTIONS\n",
-      "    read_elements(z: <built-in function arange>, beamline: dict) -> scipy.interpolate.interpolate.interp1d\n",
-      "        Sews elements into a function of z.\n",
-      "        \n",
-      "        Sews elements into a function of z with parameters:\n",
-      "        beamline --- set of accelerator elements,\n",
-      "        z [m] --- coordinate.\n",
-      "\n",
-      "DATA\n",
-      "    __all__ = ['Beam', 'Element', 'Accelerator', 'read_elements', 'Sim', '...\n",
-      "\n",
-      "FILE\n",
-      "    c:\\programdata\\anaconda3\\lib\\site-packages\\kenv\\__init__.py\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(kv)"
+    "#help(kv)"
    ]
   },
   {
