--- a/notebooks/01_theory.ipynb
+++ b/notebooks/01_theory.ipynb
@@ -345,7 +345,7 @@
     "$$\n",
     "From:\n",
     "$$\n",
-    "\\delta \\phi = \\int \\dfrac {e} {2pc} B_z (z) dz.\n",
+    "\\delta \\phi = -\\int \\dfrac {e} {2pc} B_z (z) dz.\n",
     "$$\n",
     "Then the equations of the trajectory in the given coordinates look like this:\n",
     "$$\n",
