--- a/notebooks/01_theory.ipynb
+++ b/notebooks/01_theory.ipynb
@@ -365,9 +365,9 @@
    "source": [
     "### Literature\n",
     "\n",
-    "1. J. Lawson \"Physics of charged particle beams\"\n",
-    "2. N.A. Vinokurov \"Lectures on electronic optics for accelerating physicists\"\n",
-    "3. A.A. Zholents \"On compensation of the influence of the solenoid field by quadrupole lenses\""
+    "1. J. Lawson [\"Physics of charged particle beams\"](https://books.google.ru/books/about/The_Physics_of_Charged_particle_Beams.html?id=j87vAAAAMAAJ&redir_esc=y)\n",
+    "2. N.A. Vinokurov \"Lectures on electronic optics for accelerating physicists\" / Н.А. Винокуров [\"Лекции по электронной оптике для ускорительных физиков\"](http://accel.inp.nsk.su/refs/Elopt24.pdf) \n",
+    "3. A.A. Zholents \"On compensation of the influence of the solenoid field by quadrupole lenses\" / А.А. Жоленц [\"О компенсации влияния поля соленоида квадрупольными линзами\"](http://www.inp.nsk.su/images/preprint/1981_080.pdf)"
    ]
   }
  ],
