--- a/notebooks/input/01_theory/01_theory_ru.ipynb
+++ b/notebooks/input/01_theory/01_theory_ru.ipynb
@@ -421,7 +421,7 @@
     "$$\n",
     "Откуда:\n",
     "$$\n",
-    "\\delta \\phi = \\int\\dfrac{e}{2pc}B_z(z)dz.\n",
+    "\\delta \\phi = - \\int\\dfrac{e}{2pc}B_z(z)dz.\n",
     "$$\n",
     "Тогда и уравнения траектории в приведенных координатах выглядят так:\n",
     "$$\n",
@@ -446,10 +446,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Дж. Лоусон \"Физика пучков заряженных частиц\"\n",
-    "2. Н.А. Винокуров \"Лекции по электронной оптике для ускорительных физиков\"\n",
-    "3. А.А. Жоленц \"О компенсации влияния поля соленоида квадрупольными линзами\""
+    "1. Дж. Лоусон [\"Физика пучков заряженных частиц\"](https://www.studmed.ru/louson-dzh-fizika-puchkov-zaryazhennyh-chastic_7a5ae1fcef4.html)\n",
+    "2. Н.А. Винокуров [\"Лекции по электронной оптике для ускорительных физиков\"](http://accel.inp.nsk.su/refs/Elopt24.pdf)\n",
+    "3. А.А. Жоленц [\"О компенсации влияния поля соленоида квадрупольными линзами\"](http://www.inp.nsk.su/images/preprint/1981_080.pdf)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
