--- a/notebooks/05_GUI_bokeh.ipynb
+++ b/notebooks/05_GUI_bokeh.ipynb
@@ -43,8 +43,8 @@
     "beam = kv.Beam(energy=2,\n",
     "               current=2e3,\n",
     "               radius=50e-3,\n",
-    "               angular=50e-3,\n",
-    "               normalized_emittans=1000e-6)"
+    "               rp=50e-3,\n",
+    "               normalized_emittance=1000e-6)"
    ]
   },
   {
@@ -560,8 +560,8 @@
     "    input_size_x = TextInput(title=\"Radius x [m]\", value=str(beam.radius_x))\n",
     "    input_size_y = TextInput(title=\"Radius y [m]\", value=str(beam.radius_y))\n",
     "    \n",
-    "    input_angular_x = TextInput(title=\"Angular x [mrad]\", value=str(beam.angular_x))\n",
-    "    input_angular_y = TextInput(title=\"Angular y [mrad]\", value=str(beam.angular_y)) \n",
+    "    input_angular_x = TextInput(title=\"Angular x [mrad]\", value=str(beam.xp))\n",
+    "    input_angular_y = TextInput(title=\"Angular y [mrad]\", value=str(beam.yp)) \n",
     "    \n",
     "    select_sol = Select(title=\"Solenoid\", value=\"Sol. 1\", options=[itm.name for itm in accelerator.Bz_beamline.values()])\n",
     "    input_sol = TextInput(title=\"max_field [T]\", value=str(accelerator.Bz_beamline[str(select_sol.value)].max_field))\n",
@@ -645,28 +645,27 @@
       "application/vnd.bokehjs_exec.v0+json": "",
       "text/html": [
        "\n",
-       "<script src=\"http://localhost:51411/autoload.js?bokeh-autoload-element=1003&bokeh-absolute-url=http://localhost:51411&resources=none\" id=\"1003\"></script>"
+       "<script src=\"http://localhost:58276/autoload.js?bokeh-autoload-element=1003&bokeh-absolute-url=http://localhost:58276&resources=none\" id=\"1003\"></script>"
       ]
      },
      "metadata": {
       "application/vnd.bokehjs_exec.v0+json": {
-       "server_id": "4a172c6e026d4c7b8e9c96982ca889ad"
+       "server_id": "65ca9714bd2642b38a281b031f65f8c2"
       }
      },
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:bokeh.server.views.ws:Refusing websocket connection from Origin 'http://localhost:8933';                       use --allow-websocket-origin=localhost:8933 or set BOKEH_ALLOW_WS_ORIGIN=localhost:8933 to permit this; currently we allow origins {'localhost:8888'}\n",
-      "WARNING:tornado.access:403 GET /ws?bokeh-protocol-version=1.0&bokeh-session-id=xbEdPllbDvOc7d9ym4VSpiu3nugjM2njeLFhKS8FPIrU (::1) 15.99ms\n"
-     ]
     }
    ],
    "source": [
     "show(modify_doc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
