--- a/notebooks/05_GUI_bokeh.ipynb
+++ b/notebooks/05_GUI_bokeh.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accelerator.add_acc('Acc. 1', 2.7, -1, 'input/fields/E_z(z).dat')"
+    "accelerator.add_acc('Acc. 1', 2.7, -1, 'Ez.dat')"
    ]
   },
   {
@@ -72,15 +72,15 @@
    "outputs": [],
    "source": [
     "Solenoids = [ \n",
-    "    [ 0.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 1'],\n",
-    "    [ 1.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 2'],\n",
-    "    [ 1.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 3'],\n",
-    "    [ 2.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 4'],\n",
-    "    [ 2.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 5'],\n",
-    "    [ 3.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 6'],\n",
-    "    [ 3.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 7'],\n",
-    "    [ 4.0000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 8'],\n",
-    "    [ 4.5000, 0.02, 'input/fields/B_z(z).dat', 'Sol. 9'],\n",
+    "    [ 0.5000, 0.02, 'Bz.dat', 'Sol. 1'],\n",
+    "    [ 1.0000, 0.02, 'Bz.dat', 'Sol. 2'],\n",
+    "    [ 1.5000, 0.02, 'Bz.dat', 'Sol. 3'],\n",
+    "    [ 2.0000, 0.02, 'Bz.dat', 'Sol. 4'],\n",
+    "    [ 2.5000, 0.02, 'Bz.dat', 'Sol. 5'],\n",
+    "    [ 3.0000, 0.02, 'Bz.dat', 'Sol. 6'],\n",
+    "    [ 3.5000, 0.02, 'Bz.dat', 'Sol. 7'],\n",
+    "    [ 4.0000, 0.02, 'Bz.dat', 'Sol. 8'],\n",
+    "    [ 4.5000, 0.02, 'Bz.dat', 'Sol. 9'],\n",
     "]"
    ]
   },
