--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -32,7 +32,9 @@
     "\n",
     "### Test\n",
     "#### 0A. [Tracking beam test](0A_track_beam.ipynb)\n",
-    "KENV vs Astra vs WARP vs SAM.\n"
+    "KENV vs Astra vs WARP vs SAM.\n",
+    "#### 0B. [Tracking centroid test](0B_track_centroid.ipynb)\n",
+    "KENV vs Astra.\n"
    ]
   },
   {
