--- a/notebooks/04_genetic_envelope.ipynb
+++ b/notebooks/04_genetic_envelope.ipynb
@@ -1359,10 +1359,10 @@
     "Sol_B_min = 0.005 # [T] min Bz\n",
     "Sol_Num = 9     # quantity\n",
     "\n",
-    "Cxpb = 0.4       # cross chance\n",
-    "Mutpb = 0.6     # Mutation probability\n",
-    "Ngen = 100       # Number of generations\n",
-    "Pop = 300       # Number of individuals\n"
+    "CXPB = 0.4       # cross chance\n",
+    "MUTPB = 0.6     # Mutation probability\n",
+    "NGEN = 100       # Number of generations\n",
+    "POP = 300       # Number of individuals\n"
    ]
   },
   {
@@ -1414,9 +1414,9 @@
    "outputs": [],
    "source": [
     "toolbox.register(\"evaluate\", evalution_envelope)\n",
-    "toolbox.register(\"mate\", tools.cxUniform, indpb=Mutpb )\n",
-    "toolbox.register(\"mutate\", tools.mutGaussian, mu=0, sigma=((Sol_B_max - Sol_B_min)/2)**2, indpb=Mutpb)\n",
-    "toolbox.register(\"select\", tools.selTournament, tournsize=Ngen//3)"
+    "toolbox.register(\"mate\", tools.cxUniform, indpb=MUTPB )\n",
+    "toolbox.register(\"mutate\", tools.mutGaussian, mu=0, sigma=((Sol_B_max - Sol_B_min)/2)**2, indpb=MUTPB)\n",
+    "toolbox.register(\"select\", tools.selTournament, tournsize=NGEN//3)"
    ]
   },
   {
@@ -1450,8 +1450,8 @@
    "source": [
     "%%capture capt \n",
     "\n",
-    "population = toolbox.population(n=Pop)\n",
-    "pop, logbook = algorithms.eaSimple(population, toolbox, cxpb=Cxpb, mutpb=Mutpb, ngen=Ngen, stats=mstats, verbose=True)"
+    "population = toolbox.population(n=POP)\n",
+    "pop, logbook = algorithms.eaSimple(population, toolbox, cxpb=CXPB, mutpb=MUTPB, ngen=NGEN, stats=mstats, verbose=True)"
    ]
   },
   {
